src/examples/should_fail/uppercase_field.kiki
start Num

struct Num {
    Val: $NumLit
}

terminal Token {
    $NumLit: String
}
